# internal/adapters/http/router.go
@@ -76,6 +76,8 @@ func NewRouter(deps Deps) http.Handler {
 		r.Post("/games/{gameId}/buy", handleBuyProperty(deps.Games))
 		r.Post("/games/{gameId}/build", handleBuild(deps.Games))
 		r.Post("/games/{gameId}/sell-building", handleSellBuilding(deps.Games))
+		r.Post("/games/{gameId}/mortgage", handleMortgage(deps.Games))
+		r.Post("/games/{gameId}/redeem", handleRedeem(deps.Games))
 		r.Post("/games/{gameId}/pin-color", handleSetPinColor(deps.Games))
 		r.Post("/games/{gameId}/enter-hub", handleEnterHub(deps.Games))
 		r.Post("/games/{gameId}/leave-hub", handleLeaveHub(deps.Games))
